# 507ex-utils2

./: README.md  fzx2.py  main.py  pyproject.toml  requirements.txt
script/: fzx2.py
server/: app.py
source_dir/: Hello  dependfile  main.py
