[project]
name = "fzx2"
version = "1.0.0"
description = "507EX executable format version 2.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "flask~=3.1.2"
]
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wyatt Brashear", email = "admin@wyattb.dev"}
]

[project.scripts]
fzx2 = "script.fzx2:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["script"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]